# jescorecli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
jescorecli/: common.py  config.py  jescorecli.py
tests/: test_cli.py
